syntax = "proto3";

package hello;

option go_package = "hello/hellopb";

message Hello {
    string first_name = 1;
    string prefix = 2;
}

message HelloRequest {
    Hello hello = 1;
}

message HelloResponse {
    string custom_hello = 1;
}

message HelloManyLanguagesRequest {
    Hello hello = 1;
}

message HelloManyLanguagesResponse {
    string any_hello = 1;
}

service HelloService {
    //Unary
    rpc Hello(HelloRequest) returns  (HelloResponse);

    //Server streaming
    rpc HelloManyLanguages(HelloManyLanguagesRequest) returns (stream HelloManyLanguagesResponse);
}